<resources>
    <string name="treatmentssafety_title">Tratments safety</string>
    <string name="treatmentssafety_maxbolus_title">Max allowed bolus [U]</string>
    <string name="treatmentssafety_maxcarbs_title">Max allowed carbs [g]</string>
    <string name="nav_preferences">Preferences</string>
    <string name="nav_refreshtreatments">Refresh treatments from NS</string>
    <string name="nav_backup">Backup</string>
    <string name="nav_test_alert">Test alarm</string>
    <string name="nav_resetdb">Reset Databases</string>
    <string name="reset_db_confirm">Do you really want to reset the databases?</string>
    <string name="nav_exit">Exit</string>
    <string name="danar_useextended_title">Use extended boluses for >200%</string>
    <string name="danar_bt_name_title">DanaR Bluetooth device</string>
    <string name="ns_sync_use_absolute_title">Always use basal absolute values</string>
    <string name="alert_dialog_storage_permission_text">Please reboot your phone or restart AndroidAPS from the System Settings \notherwise Android APS will not have logging (important to track and verify that the algorithms are working correctly)!</string>
    <string name="objectives_objective_label_string">Objective:</string>
    <string name="objectives_gate_label_string">Gate:</string>
    <string name="objectives_button_start">Start</string>
    <string name="objectives_button_verify">Verify</string>
    <string name="nsprofileview_units_label">Units</string>
    <string name="nsprofileview_dia_label">DIA</string>
    <string name="nsprofileview_activeprofile_label">Active profile</string>
    <string name="nsprofileview_ic_label">IC</string>
    <string name="nsprofileview_isf_label">ISF</string>
    <string name="nsprofileview_basal_label">Basal</string>
    <string name="nsprofileview_target_label">Target</string>
    <string name="noprofileset">NO PROFILE SET</string>
    <string name="treatments_insulin_label_string">Insulin:</string>
    <string name="treatments_carbs_label_string">Carbs:</string>
    <string name="treatments_iob_label_string">IOB:</string>
    <string name="sms_iob">IOB:</string>
    <string name="treatments_activity_string">Activity:</string>
    <string name="treatments_iobtotal_label_string">Total IOB:</string>
    <string name="treatments_iobactivitytotal_label_string">Total IOB activity:</string>
    <string name="tempbasals_realduration_label_string">Dur:</string>
    <string name="tempbasals_netratio_label_string">Ratio:</string>
    <string name="tempbasals_netinsulin_label_string">Ins:</string>
    <string name="tempbasals_iob_label_string">IOB:</string>
    <string name="tempbasals_iobtotal_label_string">Total IOB:</string>
    <string name="treatments_newtreatment_insulinamount_label">Insulin</string>
    <string name="treatments_newtreatment_carbsamount_label">Carbs</string>
    <string name="treatments_wizard_bg_label">BG</string>
    <string name="treatments_wizard_carbs_label">Carbs</string>
    <string name="treatments_wizard_correction_label">Corr</string>
    <string name="treatments_wizard_unit_label">U</string>
    <string name="treatments_wizard_bolusiob_label">Bolus IOB</string>
    <string name="treatments_wizard_total_label">TOTAL</string>
    <string name="openapsma_run">Run now</string>
    <string name="vitualpump_label">VIRTUAL PUMP</string>
    <string name="virtualpump_basebasalrate_label">Base basal rate</string>
    <string name="virtualpump_tempbasal_label">Temp basal</string>
    <string name="virtualpump_extendedbolus_label">Extended bolus</string>
    <string name="virtualpump_battery_label">Battery</string>
    <string name="virtualpump_reservoir_label">Reservoir</string>
    <string name="virtualpump_resultok">OK</string>
    <string name="virtualpump_sqlerror">SQL Error</string>
    <string name="openapsma_lastrun_label">Last run</string>
    <string name="openapsma_inputparameters_label">Input parameters</string>
    <string name="openapsma_glucosestatus_label">Glucose status</string>
    <string name="openapsma_currenttemp_label">Current temp</string>
    <string name="openapsma_iobdata_label">IOB data</string>
    <string name="openapsma_profile_label">Profile</string>
    <string name="openapsma_mealdata_label">Meal data</string>
    <string name="result">Result</string>
    <string name="openapsma_noglucosedata">No glucose data available</string>
    <string name="openapsma_noprofile">No profile available</string>
    <string name="openapsma_nopump">No pump available</string>
    <string name="nochangerequested">No change requested</string>
    <string name="openapsma_request_label">Request</string>
    <string name="openapsma_minbg_label">Low target</string>
    <string name="rate">Rate</string>
    <string name="duration">Duration</string>
    <string name="reason">Reason</string>
    <string name="glucose">Glucose</string>
    <string name="delta">Delta</string>
    <string name="sms_delta">Delta:</string>
    <string name="avgdelta">Avg. delta</string>
    <string name="configbuilder">Config Builder</string>
    <string name="objectives">Objectives</string>
    <string name="openapsma">OpenAPS MA</string>
    <string name="overview">Overview</string>
    <string name="profileviewer">NS Profile</string>
    <string name="simpleprofile">Simple profile</string>
    <string name="tempbasal">TempBasal</string>
    <string name="treatments">Treatments</string>
    <string name="virtualpump">Virtual Pump</string>
    <string name="careportal">Careportal</string>
    <string name="configbuilder_pump">Pump</string>
    <string name="configbuilder_treatments">Treatments</string>
    <string name="configbuilder_tempbasals">Temp Basals</string>
    <string name="configbuilder_profile">Profile</string>
    <string name="configbuilder_aps">APS</string>
    <string name="configbuilder_general">General</string>
    <string name="days">days</string>
    <string name="objectives_minimalduration">Minimal duration</string>
    <string name="configbuilder_constraints">Constraints</string>
    <string name="loop">Loop</string>
    <string name="configbuilder_loop">Loop</string>
    <string name="loop_aps_label">APS</string>
    <string name="loop_constraintsprocessed_label">After processed constraints</string>
    <string name="loop_setbypump_label">Set by pump</string>
    <string name="openapsma_lastenact_label">Last enacted</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="noapsselected">NO APS SELECTED OR PROVIDED RESULT</string>
    <string name="safety">Safety</string>
    <string name="openapsma_disabled">Plugin is disabled</string>
    <string name="constraints_violation">Constraints violation</string>
    <string name="treatmentdeliveryerror">Bolus delivery error</string>
    <string name="tempbasaldeliveryerror">Tempbasal delivery error</string>
    <string name="overview_newtempbasal_basalpercent">Basal value [%]</string>
    <string name="overview_newtempbasal_percent_label">% (100% = current)</string>
    <string name="setbasalquestion">Accept new temp basal:</string>
    <string name="overview_bolus_label">Bolus</string>
    <string name="overview_calculator_label">Calculator</string>
    <string name="constraintapllied">Constraint applied!</string>
    <string name="confirmation">Confirmation</string>
    <string name="entertreatmentquestion">Enter new treatment:</string>
    <string name="bolus">Bolus</string>
    <string name="sms_bolus">Bolus:</string>
    <string name="basal">Basal</string>
    <string name="sms_basal">Basal:</string>
    <string name="carbs">Carbs</string>
    <string name="changeyourinput">Change your input!</string>
    <string name="setextendedbolusquestion">Set new extended bolus:</string>
    <string name="configbuilder_bgsource">BG Source</string>
    <string name="xdrip">xDrip</string>
    <string name="nsclient">NSClient</string>
    <string name="apsmode_title">APS Mode</string>
    <string name="closedloop">Closed Loop</string>
    <string name="openloop">Open Loop</string>
    <string name="disabledloop">Loop Disabled</string>
    <string name="disableloop">Disable loop</string>
    <string name="enableloop">Enable loop</string>
    <string name="openloop_newsuggestion">New suggestion available</string>
    <string name="unsupportedclientver">Unsupported version of NSClient</string>
    <string name="unsupportednsversion">Unsupported version of Nightscout</string>
    <string name="nsclientnotinstalled">NSClient not installed. Record lost!</string>
    <string name="objectives_bgavailableinns">BG available in NS</string>
    <string name="objectives_pumpstatusavailableinns">Pump status available in NS</string>
    <string name="objectives_manualenacts">Manual enacts</string>
    <string name="loopdisabled">LOOP DISABLED BY CONSTRAINTS</string>
    <string name="cs_lang">Czech</string>
    <string name="en_lang">English</string>
    <string name="treatments_wizard_basaliob_label">Basal IOB</string>
    <string name="bolusconstraintapplied">Bolus constraint applied</string>
    <string name="carbsconstraintapplied">Carbs constraint applied</string>
    <string name="careportal_bgcheck">BG Check</string>
    <string name="careportal_announcement">Announcement</string>
    <string name="careportal_note">Note</string>
    <string name="careportal_question">Question</string>
    <string name="careportal_exercise">Exercise</string>
    <string name="careportal_pumpsitechange">Pump Site Change</string>
    <string name="careportal_cgmsensorinsert">CGM Sensor Insert</string>
    <string name="careportal_cgmsensorstart">CGM Sensor Start</string>
    <string name="careportal_insulincartridgechange">Insulin Cartridge Change</string>
    <string name="careportal_profileswitch">Profile Switch</string>
    <string name="careportal_snackbolus">Snack Bolus</string>
    <string name="careportal_mealbolus">Meal Bolus</string>
    <string name="careportal_correctionbolus">Correction Bolus</string>
    <string name="careportal_combobolus">Combo Bolus</string>
    <string name="careportal_tempbasalstart">Temp Basal Start</string>
    <string name="careportal_tempbasalend">Temp Basal End</string>
    <string name="careportal_carbscorrection">Carbs correction</string>
    <string name="careportal_openapsoffline">OpenAPS Offline</string>
    <string name="careportal_newnstreatment_eventtype">Event type</string>
    <string name="careportal_newnstreatment_other">Other</string>
    <string name="careportal_newnstreatment_meter">Meter</string>
    <string name="careportal_newnstreatment_sensor">Sensor</string>
    <string name="careportal_newnstreatment_carbs_label">Carbs</string>
    <string name="careportal_newnstreatment_insulin_label">Insulin</string>
    <string name="careportal_newnstreatment_carbtime_label">Carb time</string>
    <string name="careportal_newnstreatment_split_label">Split</string>
    <string name="careportal_newnstreatment_duration_label">Duration</string>
    <string name="careportal_newnstreatment_percent_label">Percent</string>
    <string name="careportal_newnstreatment_absolute_label">Absolute</string>
    <string name="careportal_newnstreatment_notes_label">Notes</string>
    <string name="careportal_newnstreatment_eventtime_label">Event time</string>
    <string name="careportal_newnstreatment_profile_label">Profile</string>
    <string name="careportal_newnstreatment_enteredby_title">Entered By</string>
    <string name="openapsama">OpenAPS AMA</string>
    <string name="openapsama_useautosens">Use AMA autosens feature</string>
    <string name="openapsama_autosens_period">Interval for autosens [h]</string>
    <string name="openapsama_autosens_period_summary">Amount of hours in the past for sensitivity detection (carbs absorption time is excluded)</string>
    <string name="key_openapsama_autosens_period" translatable="false">openapsama_autosens_period</string>
</resources>